updated code to 1.20.2